--- a/src/components/menu/SideMenu.css
+++ b/src/components/menu/SideMenu.css
@@ -11,7 +11,7 @@ ul li {
     flex-direction: column;
     justify-content: space-between;
     width: 60px;
-    height: 100%;
+    height: 100vh;
     align-items: center;
     background-color: #989A9A;
     transition: 0.5s all;
@@ -20,8 +20,9 @@ ul li {
 
 .adminLeftMenu {
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .navBaseBox--active {
