--- a/src/components/menu/TopMenu.css
+++ b/src/components/menu/TopMenu.css
@@ -4,6 +4,8 @@
     width: 100%;
     height: 60px;
     position: relative;
+    justify-content: flex-end;
+    transition: 0.1s all;
 }
 
 .galacticLogo {
@@ -11,23 +13,14 @@
     position: absolute;
     width: 35px;
     height: 50px;
-    left: 49%;
+    left: 50%;
     top: 32px;
-}
-
-.menuLeft {
-    display: flex;
-    justify-content: left;
-    flex-grow: 2;
-    align-items: center;
-    margin-left: 5px;
 }
 
 .menuRight {
     display: flex;
-    justify-content: right;
+    flex-direction: row;
     align-items: center;
-    flex-grow: 2;
 }
 
 .menuRight Button {
@@ -36,6 +29,7 @@
 
 .notLoggedIn {
     display: flex;
+    padding-right: 10px;
 }
 
 .buttonRight{
