--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ label {
 /* ------------------------------- 3. Layout --------------------------------------- */
 body {
     background-color: #DFE2E2;
+    overflow: hidden
 }
 
 /* --------------- 3.1 Reusables ----------------------- */
