start profile page, added some new components for profile page - got rid of some bugs

--- a/src/components/button/TextOnlyButton/TextOnlyButton.css
+++ b/src/components/button/TextOnlyButton/TextOnlyButton.css
@@ -33,6 +33,10 @@
     background-color: #6d9898;
 }
 
+.greenButton:focus {
+    background-color: #6d9898;
+}
+
 .redButton {
     background-color: #e32f6f;
     color: #ebeded;
