--- a/src/App.css
+++ b/src/App.css
@@ -36,11 +36,11 @@
     flex: 1;
 }
 
-.pageContent {
-    flex: 1;
-    padding: 1rem;
-    overflow: auto;
-}
+/*.pageContent {*/
+/*    !*flex: 1;*!*/
+/*    !*padding: 1rem;*!*/
+/*    !*overflow: auto;*!*/
+/*}*/
 
 
 /* --------------- 3.1 Reusables ----------------------- */
