--- a/src/components/menu/TopMenu.css
+++ b/src/components/menu/TopMenu.css
@@ -1,10 +1,10 @@
 .topBar {
     display: flex;
     background-color: #989A9A;
-    width: 100%;
+    max-width: 100vw;
     height: 60px;
     position: relative;
-    justify-content: flex-end;
+    flex-direction: row;
     transition: 0.1s all;
 }
 
@@ -17,10 +17,17 @@
     top: 32px;
 }
 
+.leftTopSide{
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
 .menuRight {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-right: 10px;
 }
 
 .menuRight Button {
@@ -29,10 +36,11 @@
 
 .notLoggedIn {
     display: flex;
-    padding-right: 10px;
+    margin-right: 10px;
 }
 
 .buttonRight{
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
+    padding-right: 10px;
 }
