--- a/src/pages/addHunt/AddHunt.css
+++ b/src/pages/addHunt/AddHunt.css
@@ -1,3 +1,22 @@
+.fullAddHuntPageBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    min-height: 100%;
+    scroll-behavior: smooth;
+    overflow: scroll;
+}
+
+.contentAddHuntBox {
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    min-width: 400px;
+    min-height: 450px;
+}
+
 .uploadBox {
     width: 400px;
     height: 200px;
