--- a/src/pages/entryPages(Reg_Login)/login/Login.css
+++ b/src/pages/entryPages(Reg_Login)/login/Login.css
@@ -4,9 +4,10 @@
     align-items: center;
     justify-content: center;
     max-width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     scroll-behavior: smooth;
     overflow: scroll;
+    border: red 1px solid;
 }
 
 .contentBox {
