--- a/src/components/inputFields/DoubleInput.css
+++ b/src/components/inputFields/DoubleInput.css
@@ -6,14 +6,14 @@
 }
 
 .doubleInput1 {
-    width: 300px;
+    width: 298px;
     margin: 0;
     border-radius: 5px 0 0 5px;
+    border-right: 0;
 }
 
 .doubleInput2 {
-    width: 100px;
+    width: 102px;
     margin: 0;
     border-radius: 0 5px 5px 0;
-    border-left: 0;
 }
