--- a/src/pages/communityFeed/CommunityFeed.css
+++ b/src/pages/communityFeed/CommunityFeed.css
@@ -4,7 +4,7 @@
     padding-left: 50px;
     padding-right: 110px;
     margin-right: 20px;
-    margin-left: 10px;
+    margin-left: 30px;
 
     grid-template-columns: repeat(3, 360px);
 
@@ -21,6 +21,7 @@
 
     box-sizing: border-box;
     scroll-behavior: smooth;
+    transition: 0.5s all;
 }
 
 .a01 {
