--- a/src/pages/entryPages(Reg_Login)/login/Login.css
+++ b/src/pages/entryPages(Reg_Login)/login/Login.css
@@ -7,7 +7,7 @@
     min-height: 100vh;
     scroll-behavior: smooth;
     overflow: scroll;
-    border: red 1px solid;
+    /*border: red 1px solid;*/
 }
 
 .contentBox {
