--- a/src/pages/testpage/TestPage.css
+++ b/src/pages/testpage/TestPage.css
@@ -20,6 +20,7 @@
     overflow-x: hidden;
 
     box-sizing: border-box;
+    transition: 0.5s all;
 }
 
 .a01 {
@@ -90,19 +91,19 @@
 
     }
 
-    .a01 { grid-column: 1 / 2; grid-row: 1 / 2; }
-    .a02 { grid-column: 2 / 3; grid-row: 1 / 2; }
+    /*.a01 { grid-column: 1 / 2; grid-row: 1 / 2; }*/
+    /*.a02 { grid-column: 2 / 3; grid-row: 1 / 2; }*/
 
-    .c03 { grid-column: 1 / 3; grid-row: 2 / 3; }
+    /*.c03 { grid-column: 1 / 3; grid-row: 2 / 3; }*/
 
-    .b04 { grid-column: 1 / 2; grid-row: 3 / 5; }
-    .a05 { grid-column: 2 / 3; grid-row: 3 / 4; }
-    .a08 { grid-column: 2 / 3; grid-row: 4 / 5; }
+    /*.b04 { grid-column: 1 / 2; grid-row: 3 / 5; }*/
+    /*.a05 { grid-column: 2 / 3; grid-row: 3 / 4; }*/
+    /*.a08 { grid-column: 2 / 3; grid-row: 4 / 5; }*/
 
-    .c09 { grid-column: 1 / 3; grid-row: 5 / 6; }
+    /*.c09 { grid-column: 1 / 3; grid-row: 5 / 6; }*/
 
-    .a06 { grid-column: 1 / 2; grid-row: 6 / 7; }
-    .a07 { grid-column: 2 / 3; grid-row: 6 / 7; }
+    /*.a06 { grid-column: 1 / 2; grid-row: 6 / 7; }*/
+    /*.a07 { grid-column: 2 / 3; grid-row: 6 / 7; }*/
 
 }
 
