--- a/src/components/huntCards/horizontalCard/HorizontalCardMini/HorizontalCardMini.css
+++ b/src/components/huntCards/horizontalCard/HorizontalCardMini/HorizontalCardMini.css
@@ -3,7 +3,6 @@
     height: 230px;
     width: 551px;
 
-    box-shadow: #5b5c5c 5px 5px 9px;
     overflow: hidden;
     backdrop-filter: blur(4px);
     align-content: center;
@@ -11,21 +10,30 @@
 
     border-radius: 15px;
     margin-bottom: 16px;
+    position: relative;
 }
 
 .cardMiniBorder {
     display: flex;
+    flex-direction: column;
     width: 535px;
     height: 213px;
     border: 4px solid #ebeded;
     border-radius: 11px;
 }
 
+.edittingToolBox {
+    display: flex;
+    width: 100%;
+    height: 30px;
+    flex-direction: row;
+    border: red 1px solid;
+}
+
 .horizontalMiniBackground {
     border-radius: 15px;
 
-    opacity: 50%;
-    background-color: mediumpurple;
+    Background-color: rgba(147, 112, 219, 0.5);
 }
 
 .horizontalBackground1 {
@@ -36,4 +44,9 @@
 .horizontalBackground2 {
     background-size: cover;
     background-image: url("../../../../assets/Backgrounds/JPG/HORIZONTAL/BackgroundGalactic2.jpg");
+}
+
+.huntBoxProfile {
+    display: flex;
+    flex-grow: 1;
 }
