--- a/src/components/huntCards/squareCard/SquareCard.css
+++ b/src/components/huntCards/squareCard/SquareCard.css
@@ -11,7 +11,7 @@
 }
 
 .flipCardFront {
-    z-index: 2;
+    z-index: 1;
 }
 
 .flipCard.isFlipped {
@@ -76,20 +76,15 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    padding-top: 10px;
 
     position: relative;
     z-index: 2;
 }
 
-.huntDetails:hover {
-    cursor: pointer;
-}
-
 .statusBox {
     display: flex;
     align-items: center;
-    padding-right: 10px;
+    padding-right: 5px;
 }
 
 .statusBox h3{
@@ -98,6 +93,7 @@
 
 .statusBox img {
     display: block;
+    padding-right: 2px;
 }
 
 .statusIcon {
@@ -144,18 +140,6 @@
     padding-left: 15px;
 }
 
-.flipBox {
-    display: flex;
-    position: absolute;
-    right: 10px;
-    bottom: 8px;
-}
-
-.flipBox img{
-    display: block;
-    height: 35px;
-}
-
 .flipCardBack {
     transform: rotateY(180deg);
     color: white;
@@ -174,7 +158,7 @@
     padding-top: 10px;
 
     position: relative;
-    z-index: 2;
+    z-index: 1;
 }
 
 .statusBoxBack {
@@ -213,13 +197,53 @@
 .infoContainerBack {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .infoContainerBack p{
     color: #ebeded;
 }
 
+.flipBox {
+    display: flex;
+    position: absolute;
+    right: 10px;
+    bottom: 8px;
+    cursor: pointer;
+}
+
+.flipBox img{
+    display: block;
+    height: 35px;
+}
+
+.flipBoxBack {
+    display: flex;
+    position: absolute;
+    right: 10px;
+    bottom: 8px;
+    cursor: pointer;
+}
+
+.flipBoxBack img {
+    display: block;
+    height: 35px;
+}
+
+.toolIconBoxSC {
+    display: flex;
+    position: absolute;
+    bottom: 8px;
+    z-index: 10;
+}
+
+.toolIconBoxSC img {
+    display: block;
+    height: 35px;
+    padding-left: 5px;
+    z-index: 11;
+    cursor: pointer;
+}
 
 .squareBackground1 {
     background-size: cover;
