working on uploads - seems to finally work and showing properly. reworked backend data transfers - next up is uploading next profile data and editting hunts

--- a/src/components/popupTools/PopupTools.css
+++ b/src/components/popupTools/PopupTools.css
@@ -25,3 +25,15 @@
     background-color: #5b5c5c;
     z-index: 1;
 }
+
+.popAvatarBox {
+    display: flex;
+    align-items: center;
+    background-color: #ffffff;
+    border: 6px solid #90c8c7;
+    border-radius: 15px;
+    text-decoration: none;
+    cursor: pointer;
+    width: 115px;
+    height: 115px;
+}
