--- a/src/components/huntCards/horizontalCard/HorizontalCardMini/HorizontalCardMini.css
+++ b/src/components/huntCards/horizontalCard/HorizontalCardMini/HorizontalCardMini.css
@@ -27,7 +27,6 @@
     width: 100%;
     height: 30px;
     flex-direction: row;
-    border: red 1px solid;
 }
 
 .horizontalMiniBackground {
@@ -48,7 +47,21 @@
     background-image: url("../../../../assets/Backgrounds/JPG/HORIZONTAL/BackgroundGalactic2.jpg");
 }
 
-.huntBoxProfile {
+.cardHuntBox {
     display: flex;
     flex-grow: 1;
+    border: red 1px solid
+}
+
+.huntBoxPokemon {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 300px;
+    border: red 1px solid
+}
+
+.huntBoxHuntInfo {
+    display: flex;
+    flex-direction: column;
+    border: red 1px solid
 }
